fix: buttons center aligned

--- a/inc/assets/css/admin.css
+++ b/inc/assets/css/admin.css
@@ -248,7 +248,7 @@
     text-transform: capitalize;
 }
 #astra-sites-filters .ui-autocomplete li:hover {
-	background-color: #eeeeee; 
+	background-color: #eeeeee;
 }
 .appearance_page_starter-templates .wp-filter .search-form.searching #astra-sites__category-filter {
 	border-bottom-left-radius: 0;
@@ -1399,7 +1399,7 @@ body.loading-content .select-page-builder {
 
 .astra-previewing-single-pages #astra-sites-admin {
     margin-top: 58px;
-} 
+}
 
 #astra-sites-welcome-form-inline select {
     text-align-last: right;
@@ -1801,7 +1801,11 @@ body.loading-content .select-page-builder {
 
 .site-action-buttons-wrap {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+}
+
+.site-action-buttons-wrap .site-preview-button {
+	margin-right: 5px;
 }
 
 .single-site-pages-header {
@@ -1869,7 +1873,7 @@ body.loading-content .select-page-builder {
 }
 
 .site-action-buttons-wrap .dashicons {
-    vertical-align: sub;
+    vertical-align: middle;
     font-size: 1rem;
     margin-left: .2em;
 }
@@ -2128,7 +2132,7 @@ body.loading-content .select-page-builder {
 }
 
 .astra-previewing-single-pages .astra-sites-menu-page-wrapper > .notice.astra-sites-sync-library-message {
-   
+
     width: calc( 100% - 250px );
 }
 
@@ -2418,7 +2422,7 @@ body.loading-content .select-page-builder {
 	    background: #fff;
 	    padding: 10px;
 	}
-	
+
 	#astra-sites-menu-page .form {
 	    flex: 1;
 	}
@@ -2450,7 +2454,7 @@ body.loading-content .select-page-builder {
 	.astra-previewing-single-pages #wpbody-content {
 		position: relative;
 	}
-	
+
 	.astra-sites-no-sites .content, .astra-sites-no-favorites .content {
 	    flex-direction: column;
 	}
@@ -3113,7 +3117,7 @@ body.loading-content .select-page-builder {
 }
 
 @media screen and (min-width: 768px) {
-    
+
     .subscription-fields .subscription-field-wrap:first-child {
         padding-right: 20px;
     }
